# decsys

./: CMakeLists.txt  main.cpp
DecisionsSystem/Entity/: Entity.cpp  Entity.h
DecisionsSystem/Feats/: Feat.cpp  Feat.h
DecisionsSystem/Needs/: Need.cpp  Need.h
DecisionsSystem/Needs/Description/: NeedDescription.cpp  NeedDescription.h
DecisionsSystem/Opportunities/: Opportunity.cpp  Opportunity.h
DecisionsSystem/Stats/: Characteristic.cpp  Characteristic.h
